# seven-more-languages-in-seven-weeks

./: README.md
elixir/: day3.livemd
elixir/day1/: .gitignore  mix.exs
elixir/day1/lib/day1/: lists.ex  sentences.ex  shapes.ex
elixir/day1/lib/day1/tic_tac_toe/: board.ex  game.ex
elixir/day1/test/day1/: lists_test.exs  sentences_test.exs  shapes_test.exs
elixir/day1/test/day1/tic_tac_toe/: board_test.exs  game_test.exs
elixir/day1/test/support/: tic_tac_toe_helper.ex
elixir/day2/: .tool-versions
elixir/day2/states/: .gitignore  .tool-versions  mix.exs
elixir/day2/states/lib/states/: application.ex  video.ex
elm/day1/: notes.md
elm/day2/: mouse.elm  picture.elm
factor/day1/: day1.factor
julia/day1/: .tool-versions  day1.ipynb
lua/day1/: Makefile  ends_in_three.lua  is_prime.lua  print_primes.lua
lua/day1/spec/: ends_in_three_spec.lua  factorial_spec.lua  first_n_primes_ending_in_three_spec.lua  is_prime_spec.lua  loop_spec.lua  reduce_spec.lua
lua/day1/src/: ends_in_three.lua  factorial.lua  first_n_primes_ending_in_3.lua  is_prime.lua  loop.lua  reduce.lua
lua/day2/: punch.lua
lua/day2/spec/: arrays_spec.lua  queue_spec.lua  retry_spec.lua  strict_table_spec.lua
lua/day2/src/: arrays.lua  queue.lua  retry.lua  strict_table.lua
lua/day3/play/: .gitignore  CMakeLists.txt  Makefile  canon.lua  cmake_install.cmake  happy_birthday.lua  notation.lua  play.cpp  star_wars.lua
minikanren/day1/: chapter.livemd  exercises.livemd
minikanren/day1/logical/: CHANGELOG.md  README.md  project.clj
minikanren/day1/logical/src/logical/: core.clj
(+33 files in other folders)
